--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@ body {
   align-items: center;
 }
 .randomColorShowing {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
-
 .choice-wrapper {
   width: 100%;
   height: 200px;
@@ -30,8 +29,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-weight: 600;
 }
 
 .choice-wrapper .color2 {
@@ -41,8 +38,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-weight: 600;
 }
 
 .choice-wrapper .color3 {
@@ -52,8 +47,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-weight: 600;
 }
 .choice-wrapper .color4 {
   width: 40px;
@@ -62,8 +55,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
-  font-weight: 600;
+}
+
+.choice-wrapper .color1:hover,
+.choice-wrapper .color2:hover,
+.choice-wrapper .color3:hover,
+.choice-wrapper .color4:hover {
+  transform: scale(1.2);
 }
 .defaultColor {
   background-color: rgb(162, 162, 243);
@@ -79,4 +77,22 @@ body {
 }
 .choiceColor4 {
   background-color: darkolivegreen;
+}
+
+.js-correctPop {
+  font-weight: 800;
+  color: rgb(255, 225, 0);
+  font-size: 16px;
+  opacity: 0;
+}
+.showing {
+  animation: 1s show;
+}
+@keyframes show {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
